# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Changed
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.8.6 -> 3.9.1
  - boto3 1.28.68 -> 1.33.2
  - botocore 1.31.68 -> 1.33.2
  - cachetools 5.3.1 -> 5.3.2
  - certifi 2023.7.22 -> 2023.11.17
  - charset-normalizer 3.3.1 -> 3.3.2
  - cryptography 41.0.4 -> 41.0.7
  - django 4.2.6 -> 4.2.7
  - google-api-core 2.12.0 -> 2.14.0
  - google-api-python-client 2.104.0 -> 2.108.0
  - google-auth 2.23.3 -> 2.23.4
  - idna 3.4 -> 3.6
  - maxminddb 2.4.0 -> 2.5.1
  - meraki 1.38.0 -> 1.39.0
  - protobuf 4.24.4 -> 4.25.1
  - pyasn1 0.5.0 -> 0.5.1
  - pyopenssl 23.2.0 -> 23.3.0
  - python-ldap 3.4.3 -> 3.4.4
  - s3transfer 0.7.0 -> 0.8.1
  - urllib3 1.26.18 -> 1.26.18
  - werkzeug 3.0.0 -> 3.0.1
  - yarl 1.9.2 -> 1.9.3
  - setuptools added -> 69.0.2
### Fixed
- [CSC_DOMAINMANAGER] Fix missing json.dumps on logs list
- [PORTAL] [SELF_SERVICE] Correct wrong password change/logout links in self-service page
- [GUI] [WORKFLOW] Correctly print items' list when editing a Workflow


## [2.13.0] - 2023-11-29
### Added
- [FRONTEND] New last_update_time field
- [GUI] [WORKFLOW] CORS policy settings
- [HAPROXY] [CONF] CORS policy into config generation
- [API_PARSER] [HARFANGLAB] Fetch new endpoint for Threats logs
- [API_PARSER] [APEX] New parser
- [FRONTEND] [TCP] Add advanced option custom_tl_frame_delimiter for Rsyslog tcp frontends
### Removed
- [FRONTEND] [TIMEOUTS] Incoherent "timeout connect" in Frontend attributes
### Changed
- [HAPROXY] [CONF] Split Frontend and Workflow config to improve performance
- [HAPROXY] [CONF] Change test config names by uuids
- [PERFORMANCES] Avoid high overhead when loading Workflows by simplifying string representation
### Fixed