@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Added
+ - [SIGNALSCIENCES_NGWAF] New collector
 ### Changed
 - [DEPENDENCIES] Python dependencies upgrade
   - aiohttp 3.8.6 -> 3.9.1
